# LANgusta

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  IMPROVEMENTS.md  README.md  REMEDIATION_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  daemon.md  development-plan.md  install.md  upgrading.md
docs/adr/: 0000-adr-template.md  0001-data-layer-orm-choice.md  0002-process-architecture.md  0003-snmp-library.md  0004-platform-support.md  0005-schema-migration-discipline.md  0006-monitor-pid-file-and-self-daemonization.md
docs/specs/: 01-functionality-and-moscow.md  02-tech-stack-and-architecture.md
scripts/: lint_boundaries.py
src/langusta/: __init__.py  __main__.py  backup.py  cli.py  paths.py
src/langusta/core/: identity.py  models.py  monitoring.py  net.py  provenance.py
src/langusta/crypto/: kdf.py  master_password.py  vault.py
src/langusta/data/: oui.csv
src/langusta/db/: assets.py  backup.py  connection.py  credentials.py  export.py  import_common.py  import_lansweeper.py  import_netbox.py  meta.py  migrate.py  monitoring.py  notifications.py  proposed_changes.py  scans.py  search.py  timeline.py  writer.py
src/langusta/monitor/: daemon_control.py  notifications.py  runner.py
src/langusta/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
src/langusta/scan/: arp.py  icmp.py  mdns.py  orchestrator.py  oui.py  rdns.py  tcp.py
src/langusta/tui/: app.py  keybindings.py  styles.tcss
tests/: conftest.py  strategies.py
tests/fixtures/: lansweeper_demo.csv
tests/fixtures/snmp_transcripts/: sample.json
tests/integration/: test_cli_add_list.py  test_cli_backup_export.py  test_cli_cred.py  test_cli_import_lansweeper.py  test_cli_import_netbox.py  test_cli_install_service.py  test_cli_monitor.py  test_cli_monitor_snmp_oid.py  test_cli_monitor_ssh_command.py  test_cli_notify.py  test_cli_review.py  test_cli_scan.py  test_init_command.py  test_secret_hygiene.py
tests/property/: test_backup_dedupe.py  test_build_scan_diff_body.py  test_export_roundtrip.py  test_identity_resolver.py  test_migration_checksum.py  test_runner_invariants.py  test_writer_idempotency.py
tests/snapshots/: _asset_detail_app.py  _heartbeat_fresh_app.py  _heartbeat_fresh_frozen_app.py  _heartbeat_stale_app.py  _inventory_app.py  _review_queue_app.py  _search_app.py  _timeline_empty_app.py  _timeline_mixed_app.py  test_asset_detail_screen.py  test_heartbeat_widget.py  test_inventory_screen.py  test_review_queue_screen.py  test_search_screen.py  test_timeline_widget.py
tests/unit/: test_backup.py  test_boundary_lints.py  test_export.py  test_paths.py
tests/unit/core/: test_identity.py  test_monitoring_validation.py  test_provenance.py
tests/unit/crypto/: test_kdf.py  test_master_password.py  test_vault.py
tests/unit/db/: test_assets.py  test_backup.py  test_connection.py  test_credentials.py  test_import_lansweeper.py  test_import_netbox.py  test_meta.py  test_migrate.py  test_monitoring.py  test_notifications_dal.py  test_proposed_changes.py  test_scans.py  test_search.py  test_timeline.py  test_timeline_immutability.py  test_writer.py
tests/unit/monitor/: test_daemon_control.py  test_notifications.py  test_runner.py  test_runner_concurrency.py
tests/unit/platform/: test_daemon_recipe.py  (+1 more)
(+74 files in other folders)
